# website

./: .cookiecutter.json  .gitignore  CONTRIBUTING.rst  README.md  README.rst  noxfile.py  pyproject.toml  requirements.txt  research.yaml
.github/workflows/: constraints.txt  tests.yml
docker/: Dockerfile  Makefile  create-patch.py  pyproject.v1.toml  pyproject.v2.toml  pyproject.v3.toml
docker/hypermodern-python/: LICENSE  noxfile.py  noxfile.py.01  noxfile.py.01.patch  noxfile.py.02  noxfile.py.02.patch  pyproject.toml  pyproject.toml.01.patch  pyproject.toml.02  pyproject.toml.02.patch  pyproject.toml.03  pyproject.toml.03.patch  pyproject.toml.04  pyproject.toml.04.patch  pyproject.toml.05  pyproject.toml.05.patch
docker/hypermodern-python/src/hypermodern_python/: __main__.py  __main__.py.01  __main__.py.01.patch  __main__.py.02  __main__.py.03  __main__.py.03.patch
docker/hypermodern-python/tests/: test_main.py  test_main.py.01  test_main.py.01.patch
docs/: chapter01.md  chapter01.rst  chapter02.md  chapter02.rst  chapter03.rst  chapter04.rst  chapter05.rst  chapter06.rst  conf.py  index.md  index.rst  reference.rst  requirements.txt  usage.rst
src/hypermodern_python_website/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
