[tool.poetry]
name = "hypermodern-python-website"
version = "0.1.0"
description = ""
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinx-autobuild = "^2020.9.1"
myst-parser = "^0.12.10"
furo = "^2020.12.30b24"
pygments-pytest = "^2.1.0"
sphinx-copybutton = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
