[tool.poetry]
name = "hypermodern-python-website"
version = "0.1.0"
description = ""
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Sphinx = "^4.1.2"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.15.1"
furo = "^2021.8.11b42"
pygments-pytest = "^2.2.0"
sphinx-copybutton = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
